Damian: Added more in depth search with DeletionClue and ContainerClue. Fixed ContainerClue bugs where a single letter, or empty string was being used in thesaurus. Made the "Run Edmund" button go invisible while it's running. Fixed the bug where the unsolved clues weren't being run when "Run Edmund" was being clicked.

--- a/edmund-core/src/main/resources/static/css/home.css
+++ b/edmund-core/src/main/resources/static/css/home.css
@@ -95,12 +95,8 @@ img {
 }
 
 #statusPane {
+  margin-top: 10%;
   margin-left: 10%;
   overflow: scroll;
   text-align: center;
-}
-
-#statusLabel {
-  text-align: center;
-  text-decoration: underline;
 }
